# evo-device-volumio

./: .gitignore  BUILD.md  Cargo.toml  Cross.toml  DEVELOPING.md  README.md  SECRETS.md  SHOWCASE.md  volumio-evo-concept.md
.github/workflows/: build.yml  continuous-dev.yml  manual-build.yml  promote.yml  publish-core-binaries.yml  secret-smoke.yml
catalogue/: .gitkeep  volumio.toml
ci/oob-sign-smoke/: manifest.toml
crates/evo-device-volumio-shared/: Cargo.toml
crates/evo-device-volumio-shared/src/: lib.rs
crates/evo-volumio-library/: Cargo.toml
crates/evo-volumio-library/src/: lib.rs
keys/: vendor-plugin-signing-public.meta.toml
plugins/: .gitkeep
plugins/com.volumio.artwork.local/: Cargo.toml  manifest.toml
plugins/com.volumio.artwork.local/src/: config.rs  embedded.rs  lib.rs  resolve.rs
plugins/com.volumio.metadata.local/: Cargo.toml  manifest.toml
plugins/com.volumio.metadata.local/docs/: METADATA_QUERY_V1.md
plugins/com.volumio.metadata.local/src/: config.rs  lib.rs  query.rs
plugins/com.volumio.playback.mpd/: Cargo.toml  manifest.toml
plugins/com.volumio.playback.mpd/src/: config.rs  lib.rs  mpd.rs  playback_supervisor.rs
plugins/com.volumio.playback.mpd/src/mpd/: connection.rs  endpoint.rs  framing.rs  protocol.rs  types.rs
plugins/com.volumio.playback.mpd/src/playback_supervisor/: actor.rs  command.rs  report.rs  subject_emitter.rs  test_mock.rs
scripts/: README.md
scripts/ci/: setup-evo-core.sh
scripts/device/: bootstrap.sh  reset.sh
scripts/workstation/: Makefile
