[workspace]
resolver = "2"
members = [
    "plugins/com.volumio.playback.mpd",
]

# Workspace members are added as milestones land:
#   Milestone 3: com.volumio.playback.mpd (MPD playback warden).
#   Milestone 4: com.volumio.artwork.local (album-art respondent).
#   Later milestones: the remaining plugins per the volumio-evo-concept.md mapping.
#
# Plugin crates live under plugins/ and are added to the members array.

[workspace.package]
version = "0.1.0"
edition = "2021"
# Match evo-core MSRV (see foonerd/evo-core `docs/engineering/MSRV.md`).
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/foonerd/evo-device-volumio"

# Single pin for the evo framework. Every plugin crate consumes the SDK via
# `evo-plugin-sdk = { workspace = true }` so there is exactly one place to
# bump the version. Pin is intentional; do not track evo-core main silently.
# Upgrade procedure is documented in DEVELOPING.md.
#
# Non-framework dependencies (tokio, tracing, thiserror, etc.) are also
# pinned here so plugin crates cannot drift independently. Feature sets
# are the superset needed across the plugin population; individual crates
# pay only for what they actually import.
[workspace.dependencies]
# Same revision as a steward build from foonerd/evo-core. Until `v0.1.9` is
# tagged on GitHub, this uses a path to a sibling `evo-core` repository (see
# DEVELOPING.md "Framework dependency"). After the tag is published, replace
# the line below with:
#   evo-plugin-sdk = { git = "https://github.com/foonerd/evo-core.git", tag = "v0.1.9", version = "0.1.9" }
evo-plugin-sdk = { path = "../evo-core/crates/evo-plugin-sdk" }
semver = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync"] }
tracing = "0.1"
thiserror = "1"
anyhow = "1"

# Mirrors evo-core's workspace lints. No unsafe; all public items documented.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
