[workspace]
resolver = "2"
members = ["crates/evo-device-volumio-shared"]

# Brand-neutral audio plugins (MPD, ALSA, file-tag metadata,
# local artwork, etc.) live in evo-device-audio under
# org.evoframework.* and are admitted by this distribution's
# catalogue. Volumio-specific plugin crates land under
# plugins/<full.dotted.name>/ and are added to the members
# array as they arrive (first planned candidate: a
# Volumio-specific metadata pipeline integration).
#
# Workspace anchor and home for non-plugin Volumio-specific
# code: crates/evo-device-volumio-shared.

[workspace.package]
version = "0.1.0"
edition = "2021"
# Match evo-core MSRV (see foonerd/evo-core `docs/engineering/MSRV.md`).
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/foonerd/evo-device-volumio"

# Single pin for the evo framework. Every plugin crate consumes the SDK via
# `evo-plugin-sdk = { workspace = true }` so there is exactly one place to
# bump the version. Pin is intentional; do not track evo-core main silently.
# Upgrade procedure is documented in DEVELOPING.md.
#
# Non-framework dependencies (tokio, tracing, thiserror, etc.) are also
# pinned here so plugin crates cannot drift independently. Feature sets
# are the superset needed across the plugin population; individual crates
# pay only for what they actually import.
[workspace.dependencies]
# Same revision as a steward build from foonerd/evo-core. Until `v0.1.9` is
# tagged on GitHub, this uses a path to a sibling `evo-core` repository (see
# DEVELOPING.md "Framework dependency"). After the tag is published, replace
# the line below with:
#   evo-plugin-sdk = { git = "https://github.com/foonerd/evo-core.git", tag = "v0.1.9", version = "0.1.9" }
evo-plugin-sdk = { path = "../evo-core/crates/evo-plugin-sdk" }
semver = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync"] }
tracing = "0.1"
thiserror = "1"
anyhow = "1"
lofty = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"

# Mirrors evo-core's workspace lints. No unsafe; all public items documented.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
