[package]
name = "com-volumio-artwork-local"
# Kept in sync with manifest.toml [plugin].version and PluginIdentity in describe().
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Local album-artwork respondent for evo-device-volumio. Stocks the artwork.providers shelf."

[lib]
path = "src/lib.rs"

[dependencies]
evo-plugin-sdk = { workspace = true }
evo-volumio-library = { path = "../../crates/evo-volumio-library" }
lofty = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
