[package]
name = "com-volumio-playback-mpd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MPD playback warden for evo-device-volumio. Stocks the audio.playback shelf."

[lib]
path = "src/lib.rs"

[dependencies]
evo-plugin-sdk = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
